# todo_magic

./: Cargo.toml  Notes  build.rs
src/: autocomplete.rs  macros.rs  main.rs
