[package]
name = "magic"
version = "0.1.0"
edition = "2024"

[build-dependencies]
syn = "2.0.101"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
quote = "1.0.40"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
const_format = "0.2.34"
